Make sure users list on login screen resizes properly after virtual keyboard is dismissed.

Add tests for layout of users list after rotation and after
virtual keyboard apperance changes.

Extract LoginKeyboardTestBase class as a base for tests that
need to manipulate virtual keyboard.

Bug: 807827
Change-Id: I46a300ebbce8a59c9648573fede203ca0f21a292