ash/login/ui/login_test_base.h
@@ -26,6 +26,9 @@ class LoginTestBase : public AshTestBase {
   LoginTestBase();
   ~LoginTestBase() override;
 
+  // Utility method to create a new |mojom::UserInfoPtr| instance.
+  static mojom::LoginUserInfoPtr CreateUser(const std::string& name);
+
   // Sets the primary test widget. The widget can be retrieved using |widget()|.
   // This can be used to make a widget scoped to the whole test, e.g. if the
   // widget is created in a SetUp override.
@@ -36,9 +39,6 @@ class LoginTestBase : public AshTestBase {
   // Creates a widget containing |content|. The created widget will initially be
   // shown.
   std::unique_ptr<views::Widget> CreateWidgetWithContent(views::View* content);
-
-  // Utility method to create a new |mojom::UserInfoPtr| instance.
-  mojom::LoginUserInfoPtr CreateUser(const std::string& name) const;
 
   // Changes the active number of users. Fires an event on |data_dispatcher()|.
   void SetUserCount(size_t count);
