ash/login/ui/login_test_utils.cc
@@ -20,4 +20,15 @@ LoginPasswordView::TestApi MakeLoginPasswordTestApi(LockContentsView* view) {
       MakeLoginPrimaryAuthTestApi(view).password_view());
 }
 
+mojom::LoginUserInfoPtr CreateUser(const std::string& name) {
+  auto user = mojom::LoginUserInfo::New();
+  user->basic_user_info = mojom::UserInfo::New();
+  user->basic_user_info->account_id =
+      AccountId::FromUserEmail(name + "@foo.com");
+  user->basic_user_info->display_name = "User " + name;
+  user->basic_user_info->display_email =
+      user->basic_user_info->account_id.GetUserEmail();
+  return user;
+}
+
 }  // namespace ash
