ash/login/ui/login_user_view_unittest.cc
@@ -5,6 +5,7 @@
 #include "ash/login/ui/login_user_view.h"
 #include "ash/login/ui/login_display_style.h"
 #include "ash/login/ui/login_test_base.h"
+#include "ash/login/ui/login_test_utils.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "ui/events/test/event_generator.h"
 #include "ui/gfx/geometry/rect.h"
